--- a/.gitmodules
+++ b/.gitmodules
@@ -1,5 +1,5 @@
 [submodule "llvm"]
 	path = llvm
-	url = https://github.com/llvm/llvm-project.git
+	url = git@github.com:shalakar/llvm-project.git
 	shallow = true
 	branch = main
